--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation 'androidx.camera:camera-view:1.1.0-beta02'
+
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.1.2'
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
+
 }
