--- a/server/bp_server-master/bp_server-master/src/main/resources/application.properties
+++ b/server/bp_server-master/bp_server-master/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/museum_guide_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 # db credentials
 spring.datasource.username=root
-#spring.datasource.password=password
+spring.datasource.password=
 # set MySQL8 dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
